tools/architecture/validate-source-imports/tests/fixtures/invalid/unresolved-platform-import/src/index.ts
import { Something } from "@platform/does-not-exist";
export const packageName = "@platform/feature-workflow";
